Pulling over assets/views/controllers from Sinatra app

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,4 +12,18 @@
  *
  *= require_tree .
  *= require_self
+ *= require font-awesome
  */
+.fa.fa-check-circle{
+  color: green;
+}
+.fa.fa-times-circle{
+  color: red;
+}
+.green{
+  color: green;
+}
+.red{
+  color: red;
+}
+
