--- a/app/views/services/new.html.haml
+++ b/app/views/services/new.html.haml
@@ -1,7 +1,7 @@
 %h1 New Services
 .row
   .cold-md-9
-    = form_for :service do |f|
+    = form_for (@service) do |f|
       %div.form-group
         %label
           IP Address
