--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -1,2 +1,5 @@
-%h1 Services#show
-%p Find me in app/views/services/show.html.haml
+%section.container
+  = render partial: 'services/server', locals:{server: @server}
+  %span
+    = link_to "Edit", edit_service_path(@service), class: 'btn btn-info'
+    = link_to "Delete", @service, method: :delete, class: 'btn btn-danger', data: {confirm: "Are you sure you want to delete this service?"}
