--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -4,3 +4,6 @@
 <% else %>
   <li><%= link_to 'Sign in', signin_path %></li>
 <% end %>
+<li>
+  <%= link_to 'New Monit Service', new_service_path %>
+</li>
