--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,9 +1,13 @@
 <%# add navigation links to this file %>
 <% if user_signed_in? %>
-  <li><%= link_to 'Sign out', signout_path %></li>
+  <li>
+    <%= link_to 'New Monit Service', new_service_path %>
+  </li>
+  <li>
+    <%= link_to 'Sign out', signout_path %>
+  </li>
 <% else %>
-  <li><%= link_to 'Sign in', signin_path %></li>
+  <li>
+    <%= link_to 'Sign in', signin_path %>
+  </li>
 <% end %>
-<li>
-  <%= link_to 'New Monit Service', new_service_path %>
-</li>
