Fixing some basic routing and styling

--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,4 +1,6 @@
-<%# add navigation links to this file %>
+<li>
+  <%= link_to 'Services', services_path %>
+</li>
 <% if user_signed_in? %>
   <li>
     <%= link_to 'New Monit Service', new_service_path %>
