--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,3 +1,5 @@
 %section.container
   %h1
-    MonitWeb
+    Overseer
+  %p
+    Lightweight, free, and probably somewhat unreliable centralized monitoring of servers with [monit](http://mmonit.com/monit/) installed.
