--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -2,4 +2,4 @@
   %h1
     Overseer
   %p
-    Lightweight, free, and probably somewhat unreliable centralized monitoring of servers with [monit](http://mmonit.com/monit/) installed.
+    Lightweight, free, and probably somewhat unreliable centralized monitoring of servers with <a href="http://mmonit.com/monit/">monit</a> installed.
