Adding '%'s to CPU usage

--- a/app/views/services/_server.html.haml
+++ b/app/views/services/_server.html.haml
@@ -20,7 +20,7 @@
       %span
         CPU:
         %b
-          = server.system.cpu
+          = "#{server.system.cpu}%"
     .col-md-2
       %span
         Memory:
