--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -19,7 +19,7 @@
         %span
           CPU:
           %b
-            = server.system.cpu
+            = "#{server.system.cpu}%"
       .col-md-2
         %span
           Memory:
